--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk 
+        android:targetSdkVersion="19"
+        android:minSdkVersion="11" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:allowBackup="true" >
         <activity
             android:name=".DatePickerDialogExample"
             android:label="@string/app_name" >
